Implement argument extensions for JavaFX
For Java >8, we need to load JavaFX modules and specify their
location when calling java. To allow easy use of system installed
JavaFX, we now automatically extend/set these arguments accordingly
if archlinux-java-run is invoked with `-f javafx`.