@@ -142,6 +142,8 @@ while :; do
     shift
 done
 
+read -r -a java_args <<< "$@"
+
 available=$(archlinux-java status | grep -Eo 'java\S*' | sort -rV)
 default=$(archlinux-java get)
 
@@ -162,7 +164,7 @@ eligible=( )
 for ver in $available; do
   if [[ $ver =~ $exp ]]; then
 
-    major=$(echo $ver|cut -d- -f2)
+    major=$(cut -d- -f2 <<< "$ver")
 
     # Test for each of the required features
     for ft in "${features[@]}"; do
@@ -171,8 +173,11 @@ for ver in $available; do
         if [[ $major -lt 9 ]]; then
           testcmd="/usr/lib/jvm/${ver}/bin/java -jar ${JAVADIR}/archlinux-java-run/TestJavaFX.jar"
         else
-          mpath=$(eval echo "/usr/lib/jvm/{${ver},java-${major}-openjfx}/lib/{javafx.base.jar,javafx.controls.jar,javafx.fxml.jar,javafx.graphics.jar,javafx.media.jar,javafx.swing.jar,javafx.web.jar,javafx-swt.jar}" | tr ' ' :)
+          mpath=$(eval echo "/usr/lib/jvm/{${ver},java-${major}-openjfx}/lib/{javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx-swt}.jar" | tr ' ' :)
           testcmd="/usr/lib/jvm/${ver}/bin/java --module-path $mpath --add-modules ALL-MODULE-PATH -jar ${JAVADIR}/archlinux-java-run/TestJavaFX.jar"
+        fi
+        if [ $verbose -eq 1 ]; then
+          echo "Testing command: $testcmd"
         fi
         $testcmd
         if [ $? -ne 0 ]; then
@@ -199,36 +204,82 @@ if [ "${#eligible[@]}" -eq 0 ]; then
   exit 1
 fi
 
+if [ $verbose -eq 1 ]; then
+  echo "Eligible JVMs: ${eligible[@]}"
+fi
+
 # If default JRE is suitable, bypass any remaining logic
 if [[ " ${eligible[@]} " =~ " $default " ]]; then
-  command="/usr/lib/jvm/$default/bin/java $@"
+  chosen_ver=$(cut -d- -f2 <<< "$default")
+  chosen_pkg=$default
 else
   candidates=( )
-  newest=0
+  chosen_ver=0
   for ver in "${eligible[@]}"; do
     jvm_ver=$(cut -d- -f2 <<< "$ver")
-    if [ $newest -eq 0 ]; then
-      newest=$jvm_ver
-    elif [ $newest -gt $jvm_ver ]; then
+    if [ $chosen_ver -eq 0 ]; then
+      chosen_ver=$jvm_ver
+    elif [ $chosen_ver -gt $jvm_ver ]; then
       break
     fi
     candidates+=( "$ver" )
   done
 
   pref_package=$(cut -d- -f3- <<< "$default")
-  pref_version="java-$newest-${pref_package}"
+  pref_versioned="java-${chosen_ver}-${pref_package}"
 
-  if [[ " ${candidates[@]} " =~ " ${pref_version} " ]]; then
-    command="/usr/lib/jvm/${pref_version}/bin/java $@"
-  elif [[ " ${candidates[@]} " =~ " java-$newest-openjdk " ]]; then
-    command="/usr/lib/jvm/java-$newest-openjdk/bin/java $@"
+  if [[ " ${candidates[@]} " =~ " ${pref_versioned} " ]]; then
+    chosen_pkg=$pref_versioned
+  elif [[ " ${candidates[@]} " =~ " java-${chosen_ver}-openjdk " ]]; then
+    chosen_pkg=java-${chosen_ver}-openjdk
   else
-    command="/usr/lib/jvm/$candidates/bin/java $@"
+    chosen_pkg=$candidates
   fi
 fi
 
+for ft in "${features[@]}"; do
+  case "$ft" in
+  javafx)
+    if [[ $chosen_ver -gt 8 ]]; then
+      echo "Modifying java arguments to support system installation of JavaFX"
+      # Extend --module-path and --add-modules to support JavaFX
+      additional_mpath=$(eval echo "/usr/lib/jvm/{${chosen_pkg},java-${chosen_ver}-openjfx}/lib/{javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx-swt}.jar" | tr ' ' :)
+      additional_mods=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
+      mpath_set=0
+      mods_set=0
+      for i in "${!java_args[@]}"; do
+        case "${java_args[$i]}" in
+        --module-path=*)
+          java_args[$i]="${java_args[$i]}:${additional_mpath}"
+          mpath_set=1
+          ;;
+        --module-path)
+          java_args[$((i+1))]="${java_args[$((i+1))]}:${additional_mpath}"
+          mpath_set=1
+          ;;
+        --add-modules=*)
+          java_args[$i]="${java_args[$i]},${additional_mods}"
+          mods_set=1
+          ;;
+        --add-modules)
+          java_args[$((i+1))]="${java_args[$((i+1))]},${additional_mods}"
+          mods_set=1
+          ;;
+        esac
+      done
+      if [ $mods_set -eq 0 ]; then
+        java_args=("--add-modules=${additional_mods}" "${java_args[@]}")
+      fi
+      if [ $mpath_set -eq 0 ]; then
+        java_args=("--module-path=${additional_mpath}" "${java_args[@]}")
+      fi
+    fi
+    ;;
+  esac
+done
+
 if [ $verbose -eq 1 ]; then
-  echo "Executing command: $command"
+  echo "Executing command: /usr/lib/jvm/${chosen_pkg}/bin/java ${java_args[@]}"
 fi
 
-exec $command
+exec /usr/lib/jvm/${chosen_pkg}/bin/java "${java_args[@]}"
